# flake8-env-patterns

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
tasks/: release.py
