[metadata]
name = flake8-env-patterns
version = 0.1.0
author = Felix Scherz
author_email = felixwscherz@gmail.com
description = flake8 plugin which checks environment variable access against allowed patterns
long_description = file: README.md
url = https://github.com/felixwscherz/flake8-env-patterns
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_env_patterns
install_requires =
    flake8>=3.8
    importlib-metadata; python_version<"3.10"
python_requires = >=3.9

[options.package_data]
* = *.md

[options.entry_points]
flake8.extension =
    FPU=flake8_env_patterns:Plugin
